--- a/src/app/modules/offer-portal/layouts/offer-portal-header/offer-portal-header.component.html
+++ b/src/app/modules/offer-portal/layouts/offer-portal-header/offer-portal-header.component.html
@@ -56,7 +56,7 @@
       <li class="nav-item btn-group" dropdown>
         <button id="button-basic" dropdownToggle type="button" class="btn nav-link dropdown-toggle"
           aria-controls="dropdown-basic">
-          <span class="fas fa-user mr-1"></span> <span class="nav-link-label">Account</span> <span class="caret"></span>
+          <span class="fas fa-user mr-1"></span> <span class="nav-link-label">{{userInfo.name}}</span> <span class="caret"></span>
         </button>
         <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu dropdown-menu-right" role="menu"
           aria-labelledby="button-basic">
